<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">XConnect</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_directory_placeholder">Directory</string>

    <!-- Temporary String Resources -->
    <string name="nav_bench_report_text">Bench Report</string>
    <string name="nav_partial_utilization_text">Partial Utilization Report</string>
    <string name="nav_quick_entry_text">Opportunity Quick Entry</string>
    <string name="nav_project_pod_text">Project Pod Overview</string>
    <string name="nav_up_or_out_text">Up or Out Report</string>

</resources>
