<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bench_report"
            android:icon="@drawable/bench_report_icon"
            android:title="@string/nav_bench_report_text"
            android:enabled="true"/>
        <item
            android:id="@+id/nav_partial_utilization"
            android:icon="@drawable/partial_utilization_icon"
            android:title="@string/nav_partial_utilization_text"
            android:enabled="false"/>
        <item
            android:id="@+id/nav_quick_entry"
            android:icon="@drawable/quick_entry_icon"
            android:title="@string/nav_quick_entry_text"
            android:enabled="false" />
        <item
            android:id="@+id/nav_project_pod"
            android:icon="@drawable/project_pod_icon"
            android:title="@string/nav_project_pod_text"
            android:enabled="false" />
        <item
            android:id="@+id/nav_up_or_out"
            android:icon="@drawable/up_or_out_icon"
            android:title="@string/nav_up_or_out_text"
            android:enabled="false" />
    </group>

</menu>
